# templatelib

./: .gitigonre  CHANGELOG.md  CMakeLists.txt  README.md  tspkg.yaml
cmake/: tlib-config.cmake.in
